feat: 인생 영화 제목을 바탕으로 checkbox 라벨 이름 만들도록 변경

--- a/html/index.html
+++ b/html/index.html
@@ -13,7 +13,7 @@
       <ul>
         <li>이름: UKKO</li>
         <li>사는 곳: 서초구</li>
-        <li>하이. 우코입니다.</li>
+        <li>MBTI : INFP</li>
       </ul>
     </div>
     <div>
@@ -114,19 +114,21 @@
         </div>
         <div class="form-div">
           <span>본인 취향의 영화</span> <br>
+          
           <input class="checkbox-movie" type="checkbox" id="gravity" name="gravity" >
-          <label for="gravity">그래비티</label></br>
+          <label for="gravity" class ="checkbox-label"></label></br>
+
           <input class="checkbox-movie" type="checkbox" id="lalaland" name="lalaland" >
-          <label for="lalaland">라라랜드</label></br>
+          <label for="lalaland" class ="checkbox-label"></label></br>
 
           <input class="checkbox-movie" type="checkbox" id="her" name="her" >
-          <label for="her">her</label></br>
+          <label for="her" class ="checkbox-label"></label></br>
 
           <input class="checkbox-movie" type="checkbox" id="sicario" name="c" >
-          <label for="sicario">시카리오</label></br>
+          <label for="sicario" class ="checkbox-label"></label></br>
 
           <input class="checkbox-movie" type="checkbox" id="drive-my-car" name="driveMyCar" >
-          <label for="drive-my-car">드라이브 마이 카</label></br>
+          <label for="drive-my-car" class ="checkbox-label"> 마이 카</label></br>
 
 
         </div>
